# models/stock_value.go
@@ -1,0 +1,49 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// StockValue stock value and variation of a company
+//
+// swagger:model stockValue
+type StockValue struct {
+
+	// company label
+	Label string `json:"label,omitempty"`
+
+	// value of the stock company
+	Value float64 `json:"value,omitempty"`
+
+	// value of the daily variation of the stock value
+	Variation float64 `json:"variation,omitempty"`
+}
+
+// Validate validates this stock value
+func (m *StockValue) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *StockValue) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *StockValue) UnmarshalBinary(b []byte) error {
+	var res StockValue
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
