# restapi/operations/get_stock_responses.go
@@ -1,0 +1,130 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/tupyy/stock/models"
+)
+
+// GetStockOKCode is the HTTP code returned for type GetStockOK
+const GetStockOKCode int = 200
+
+/*GetStockOK ok
+
+swagger:response getStockOK
+*/
+type GetStockOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Stock `json:"body,omitempty"`
+}
+
+// NewGetStockOK creates GetStockOK with default headers values
+func NewGetStockOK() *GetStockOK {
+
+	return &GetStockOK{}
+}
+
+// WithPayload adds the payload to the get stock o k response
+func (o *GetStockOK) WithPayload(payload *models.Stock) *GetStockOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get stock o k response
+func (o *GetStockOK) SetPayload(payload *models.Stock) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetStockOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetStockBadRequestCode is the HTTP code returned for type GetStockBadRequest
+const GetStockBadRequestCode int = 400
+
+/*GetStockBadRequest bad request
+
+swagger:response getStockBadRequest
+*/
+type GetStockBadRequest struct {
+}
+
+// NewGetStockBadRequest creates GetStockBadRequest with default headers values
+func NewGetStockBadRequest() *GetStockBadRequest {
+
+	return &GetStockBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *GetStockBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// GetStockNotFoundCode is the HTTP code returned for type GetStockNotFound
+const GetStockNotFoundCode int = 404
+
+/*GetStockNotFound company not found
+
+swagger:response getStockNotFound
+*/
+type GetStockNotFound struct {
+}
+
+// NewGetStockNotFound creates GetStockNotFound with default headers values
+func NewGetStockNotFound() *GetStockNotFound {
+
+	return &GetStockNotFound{}
+}
+
+// WriteResponse to the client
+func (o *GetStockNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
+
+// GetStockInternalServerErrorCode is the HTTP code returned for type GetStockInternalServerError
+const GetStockInternalServerErrorCode int = 500
+
+/*GetStockInternalServerError internal error
+
+swagger:response getStockInternalServerError
+*/
+type GetStockInternalServerError struct {
+}
+
+// NewGetStockInternalServerError creates GetStockInternalServerError with default headers values
+func NewGetStockInternalServerError() *GetStockInternalServerError {
+
+	return &GetStockInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *GetStockInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
